--- a/style.css
+++ b/style.css
@@ -194,3 +194,21 @@ button {
         font-size: 0.9rem; 
     }
 }
+
+.image-container img {
+    width: 100%;
+    height: auto;
+}
+
+
+@media (max-width: 768px) {
+    .image-container img {
+        display: none;
+    }
+}
+
+@media (max-width: 480px) {
+    .image-container img {
+        display: none;
+    }
+}
